// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`command surface (characterization) > enablement and disabled reasons: csv 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "enabled",
  "edit.copyAsBacklogHeaderCol": "enabled",
  "edit.copyAsBacklogHeaderRow": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyAsMarkdownNoHeader": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "enabled",
  "file.save": "enabled",
  "file.saveOptions": "enabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.alignLeft": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.alignRight": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.backgroundColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.bold": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.borders": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.clear": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.conditionalFormatting": "enabled",
  "format.font": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.italic": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.numberFormat": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetCurrency": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetNumber": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetPercent": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.textColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.underline": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "enabled",
  "insert.chart": "enabled",
  "insert.ellipse": "enabled",
  "insert.image": "enabled",
  "insert.line": "enabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "enabled",
  "insert.textBox": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "enabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "disabled",
  "worksheet.addCsv": "disabled",
  "worksheet.addFromCsv": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addPaper": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.tabColor": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: csvReadOnly 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "enabled",
  "edit.copyAsBacklogHeaderCol": "enabled",
  "edit.copyAsBacklogHeaderRow": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyAsMarkdownNoHeader": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "enabled",
  "file.save": "enabled",
  "file.saveOptions": "enabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.alignLeft": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.alignRight": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.backgroundColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.bold": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.borders": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.clear": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.conditionalFormatting": "enabled",
  "format.font": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.italic": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.numberFormat": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetCurrency": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetNumber": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.presetPercent": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.textColor": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "format.underline": "disabled: Formatting cannot be stored in a CSV file. To use it, convert with File > This File > Convert to RSF Spreadsheet….",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "enabled",
  "insert.chart": "enabled",
  "insert.ellipse": "enabled",
  "insert.image": "enabled",
  "insert.line": "enabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "enabled",
  "insert.textBox": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "enabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "disabled",
  "worksheet.addCsv": "disabled",
  "worksheet.addFromCsv": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addPaper": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.tabColor": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: none 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "disabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "disabled",
  "data.validation": "disabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "disabled",
  "edit.copyAsBacklog": "disabled",
  "edit.copyAsBacklogHeaderCol": "disabled",
  "edit.copyAsBacklogHeaderRow": "disabled",
  "edit.copyAsMarkdown": "disabled",
  "edit.copyAsMarkdownNoHeader": "disabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "disabled",
  "edit.fillDown": "disabled",
  "edit.flashFill": "disabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "disabled",
  "edit.insertTime": "disabled",
  "edit.moveRange": "disabled",
  "edit.paste": "disabled",
  "edit.pasteFormats": "disabled",
  "edit.pasteValues": "disabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "disabled",
  "edit.undo": "disabled",
  "file.closeTab": "disabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "disabled",
  "file.reopen": "disabled",
  "file.save": "disabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "disabled",
  "format.alignCenter": "disabled",
  "format.alignLeft": "disabled",
  "format.alignRight": "disabled",
  "format.backgroundColor": "disabled",
  "format.bold": "disabled",
  "format.borders": "disabled",
  "format.clear": "disabled",
  "format.conditionalFormatting": "disabled",
  "format.font": "disabled",
  "format.italic": "disabled",
  "format.numberFormat": "disabled",
  "format.presetCurrency": "disabled",
  "format.presetNumber": "disabled",
  "format.presetPercent": "disabled",
  "format.textColor": "disabled",
  "format.underline": "disabled",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "disabled",
  "insert.chart": "disabled",
  "insert.ellipse": "disabled",
  "insert.image": "disabled",
  "insert.line": "disabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "disabled",
  "insert.textBox": "disabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "disabled",
  "search.findNext": "disabled",
  "search.findPrev": "disabled",
  "search.goToCell": "disabled",
  "search.replace": "disabled",
  "sheet.addColumn": "disabled",
  "sheet.addRow": "disabled",
  "sheet.autoFitCols": "disabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "disabled",
  "sheet.deleteRows": "disabled",
  "sheet.displayLanguage": "disabled",
  "sheet.exportCsv": "disabled",
  "sheet.exportJson": "disabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "disabled",
  "sheet.filter": "disabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "disabled",
  "sheet.insertColLeft": "disabled",
  "sheet.insertColRight": "disabled",
  "sheet.insertRowAbove": "disabled",
  "sheet.insertRowBelow": "disabled",
  "sheet.recalculate": "disabled",
  "sheet.sort": "disabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "disabled",
  "sheet.versionHistory": "disabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "disabled",
  "view.zoom.110": "disabled",
  "view.zoom.125": "disabled",
  "view.zoom.150": "disabled",
  "view.zoom.200": "disabled",
  "view.zoom.50": "disabled",
  "view.zoom.75": "disabled",
  "view.zoom.90": "disabled",
  "view.zoom.in": "disabled",
  "view.zoom.out": "disabled",
  "view.zoom.reset": "disabled",
  "worksheet.add": "disabled",
  "worksheet.addCsv": "disabled",
  "worksheet.addFromCsv": "disabled",
  "worksheet.addJson": "disabled",
  "worksheet.addMarkdown": "disabled",
  "worksheet.addPaper": "disabled",
  "worksheet.addText": "disabled",
  "worksheet.addYaml": "disabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "disabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "disabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "disabled",
  "worksheet.tabColor": "disabled",
  "worksheet.toggleLock": "disabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsf 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "enabled",
  "edit.copyAsBacklogHeaderCol": "enabled",
  "edit.copyAsBacklogHeaderRow": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyAsMarkdownNoHeader": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "enabled",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "disabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "enabled",
  "format.alignLeft": "enabled",
  "format.alignRight": "enabled",
  "format.backgroundColor": "enabled",
  "format.bold": "enabled",
  "format.borders": "enabled",
  "format.clear": "enabled",
  "format.conditionalFormatting": "enabled",
  "format.font": "enabled",
  "format.italic": "enabled",
  "format.numberFormat": "enabled",
  "format.presetCurrency": "enabled",
  "format.presetNumber": "enabled",
  "format.presetPercent": "enabled",
  "format.textColor": "enabled",
  "format.underline": "enabled",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "enabled",
  "insert.chart": "enabled",
  "insert.ellipse": "enabled",
  "insert.image": "enabled",
  "insert.line": "enabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "enabled",
  "insert.textBox": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addCsv": "enabled",
  "worksheet.addFromCsv": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addPaper": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "enabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "enabled",
  "worksheet.tabColor": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsfMarkdown 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "disabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "disabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "disabled",
  "edit.copyAsBacklogHeaderCol": "disabled",
  "edit.copyAsBacklogHeaderRow": "disabled",
  "edit.copyAsMarkdown": "disabled",
  "edit.copyAsMarkdownNoHeader": "disabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "disabled",
  "edit.flashFill": "disabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "disabled",
  "edit.insertTime": "disabled",
  "edit.moveRange": "disabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "edit.pasteValues": "disabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "disabled",
  "edit.undo": "enabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.alignLeft": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.alignRight": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.backgroundColor": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.bold": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.borders": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.clear": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.conditionalFormatting": "disabled",
  "format.font": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.italic": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.numberFormat": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.presetCurrency": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.presetNumber": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.presetPercent": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.textColor": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "format.underline": "disabled: Cell formatting is for sheets of cells. A Markdown, JSON, YAML or text sheet has no cells to format.",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "disabled",
  "insert.chart": "disabled",
  "insert.ellipse": "disabled",
  "insert.image": "disabled",
  "insert.line": "disabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "disabled",
  "insert.textBox": "disabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "disabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "disabled",
  "sheet.deleteRows": "disabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "enabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "disabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "disabled",
  "sheet.insertColLeft": "disabled",
  "sheet.insertColRight": "disabled",
  "sheet.insertRowAbove": "disabled",
  "sheet.insertRowBelow": "disabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "disabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addCsv": "enabled",
  "worksheet.addFromCsv": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addPaper": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "enabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "enabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "enabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "enabled",
  "worksheet.next": "enabled",
  "worksheet.prev": "enabled",
  "worksheet.rename": "enabled",
  "worksheet.tabColor": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsfPaper 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "disabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "disabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "disabled",
  "edit.copyAsBacklogHeaderCol": "disabled",
  "edit.copyAsBacklogHeaderRow": "disabled",
  "edit.copyAsMarkdown": "disabled",
  "edit.copyAsMarkdownNoHeader": "disabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "disabled",
  "edit.flashFill": "disabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "disabled",
  "edit.insertTime": "disabled",
  "edit.moveRange": "disabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "edit.pasteValues": "disabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "enabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.alignLeft": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.alignRight": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.backgroundColor": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.bold": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.borders": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.clear": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.conditionalFormatting": "disabled",
  "format.font": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.italic": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.numberFormat": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.presetCurrency": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.presetNumber": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.presetPercent": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.textColor": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "format.underline": "disabled: The squares of a grid paper sheet take no formatting. Put text in a text box and format it in the Object List.",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "enabled",
  "insert.chart": "enabled",
  "insert.ellipse": "enabled",
  "insert.image": "enabled",
  "insert.line": "enabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "enabled",
  "insert.textBox": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "disabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "disabled",
  "object.saveAsSvg": "disabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "disabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "disabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "disabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addCsv": "enabled",
  "worksheet.addFromCsv": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addPaper": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "enabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "enabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "enabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "enabled",
  "worksheet.next": "enabled",
  "worksheet.prev": "enabled",
  "worksheet.rename": "enabled",
  "worksheet.tabColor": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;

exports[`command surface (characterization) > enablement and disabled reasons: rsfShapePicked 1`] = `
{
  "app.settings": "enabled",
  "data.checkValidation": "enabled",
  "data.comment": "enabled",
  "data.compareDiff": "disabled",
  "data.runSqlQuery": "enabled",
  "data.validation": "enabled",
  "drive.open": "disabled",
  "drive.save": "disabled",
  "drive.saveAs": "disabled",
  "drive.signOut": "disabled",
  "edit.copy": "enabled",
  "edit.copyAsBacklog": "enabled",
  "edit.copyAsBacklogHeaderCol": "enabled",
  "edit.copyAsBacklogHeaderRow": "enabled",
  "edit.copyAsMarkdown": "enabled",
  "edit.copyAsMarkdownNoHeader": "enabled",
  "edit.copyScreenshot": "disabled",
  "edit.cut": "enabled",
  "edit.fillDown": "enabled",
  "edit.flashFill": "enabled",
  "edit.insertCopiedCells": "disabled",
  "edit.insertCopiedCols": "disabled",
  "edit.insertCopiedRows": "disabled",
  "edit.insertDate": "enabled",
  "edit.insertTime": "enabled",
  "edit.moveRange": "enabled",
  "edit.paste": "enabled",
  "edit.pasteFormats": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "edit.pasteValues": "enabled",
  "edit.redo": "disabled",
  "edit.revertAll": "disabled",
  "edit.revertCell": "disabled",
  "edit.selectAll": "enabled",
  "edit.undo": "enabled",
  "file.closeTab": "enabled",
  "file.importJsonTable": "enabled",
  "file.new": "enabled",
  "file.newCsv": "enabled",
  "file.newJson": "enabled",
  "file.newMarkdown": "enabled",
  "file.newYaml": "enabled",
  "file.open": "enabled",
  "file.openRecent": "disabled",
  "file.print": "enabled",
  "file.reopen": "disabled",
  "file.save": "enabled",
  "file.saveOptions": "disabled",
  "file.toggleProtect": "enabled",
  "format.alignCenter": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.alignLeft": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.alignRight": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.backgroundColor": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.bold": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.borders": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.clear": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.conditionalFormatting": "enabled",
  "format.font": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.italic": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.numberFormat": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.presetCurrency": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.presetNumber": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.presetPercent": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.textColor": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "format.underline": "disabled: Shapes are picked, so cell formatting is off. Format shapes in the Object List, or click a cell first.",
  "help.about": "enabled",
  "help.formula": "enabled",
  "help.shortcuts": "enabled",
  "insert.arrow": "enabled",
  "insert.chart": "enabled",
  "insert.ellipse": "enabled",
  "insert.image": "enabled",
  "insert.line": "enabled",
  "insert.objectList": "enabled",
  "insert.rectangle": "enabled",
  "insert.textBox": "enabled",
  "lang.en": "enabled",
  "lang.ja": "enabled",
  "object.alignBottom": "disabled",
  "object.alignCenter": "disabled",
  "object.alignLeft": "disabled",
  "object.alignMiddle": "disabled",
  "object.alignRight": "disabled",
  "object.alignTop": "disabled",
  "object.bringForward": "disabled",
  "object.bringToFront": "disabled",
  "object.delete": "enabled",
  "object.distributeHorizontally": "disabled",
  "object.distributeVertically": "disabled",
  "object.group": "disabled",
  "object.saveAsPng": "enabled",
  "object.saveAsSvg": "enabled",
  "object.sendBackward": "disabled",
  "object.sendToBack": "disabled",
  "object.ungroup": "disabled",
  "search.find": "enabled",
  "search.findNext": "enabled",
  "search.findPrev": "enabled",
  "search.goToCell": "enabled",
  "search.replace": "enabled",
  "sheet.addColumn": "enabled",
  "sheet.addRow": "enabled",
  "sheet.autoFitCols": "enabled",
  "sheet.clearVersionHistory": "disabled",
  "sheet.convert": "disabled",
  "sheet.deleteCols": "enabled",
  "sheet.deleteRows": "enabled",
  "sheet.displayLanguage": "enabled",
  "sheet.exportCsv": "enabled",
  "sheet.exportJson": "enabled",
  "sheet.exportSheetText": "disabled",
  "sheet.exportXlsx": "enabled",
  "sheet.filter": "enabled",
  "sheet.filterClear": "disabled",
  "sheet.headerFilter": "enabled",
  "sheet.insertColLeft": "enabled",
  "sheet.insertColRight": "enabled",
  "sheet.insertRowAbove": "enabled",
  "sheet.insertRowBelow": "enabled",
  "sheet.recalculate": "enabled",
  "sheet.sort": "enabled",
  "sheet.sortClear": "disabled",
  "sheet.timezone": "enabled",
  "sheet.versionHistory": "enabled",
  "tab.moveFirst": "disabled",
  "tab.moveLast": "disabled",
  "tab.moveLeft": "disabled",
  "tab.moveRight": "disabled",
  "view.autoFitOnOpen": "enabled",
  "view.bandedRows": "enabled",
  "view.commentsPanel": "enabled",
  "view.customizeStatusBar": "enabled",
  "view.customizeToolbar": "enabled",
  "view.density.comfortable": "enabled",
  "view.density.compact": "enabled",
  "view.density.standard": "enabled",
  "view.editHints": "enabled",
  "view.freezeAtSelection": "disabled",
  "view.fullscreen": "disabled",
  "view.gridlines": "enabled",
  "view.highlightCol": "enabled",
  "view.highlightRow": "enabled",
  "view.sheetFont.bizUd": "enabled",
  "view.sheetFont.meiryoUi": "enabled",
  "view.sheetFont.ms": "enabled",
  "view.sheetFont.msUi": "enabled",
  "view.sheetFont.notoSansJp": "enabled",
  "view.sheetFont.yuGothicUi": "enabled",
  "view.sheetTabsVertical": "enabled",
  "view.stickyFirstColumn": "enabled",
  "view.stickyFirstRow": "enabled",
  "view.theme.dark": "enabled",
  "view.theme.hybrid": "enabled",
  "view.theme.light": "enabled",
  "view.theme.system": "enabled",
  "view.toolbar": "enabled",
  "view.wrap": "enabled",
  "view.zoom.100": "enabled",
  "view.zoom.110": "enabled",
  "view.zoom.125": "enabled",
  "view.zoom.150": "enabled",
  "view.zoom.200": "enabled",
  "view.zoom.50": "enabled",
  "view.zoom.75": "enabled",
  "view.zoom.90": "enabled",
  "view.zoom.in": "enabled",
  "view.zoom.out": "enabled",
  "view.zoom.reset": "enabled",
  "worksheet.add": "enabled",
  "worksheet.addCsv": "enabled",
  "worksheet.addFromCsv": "enabled",
  "worksheet.addJson": "enabled",
  "worksheet.addMarkdown": "enabled",
  "worksheet.addPaper": "enabled",
  "worksheet.addText": "enabled",
  "worksheet.addYaml": "enabled",
  "worksheet.delete": "disabled",
  "worksheet.duplicate": "enabled",
  "worksheet.moveFirst": "disabled",
  "worksheet.moveLast": "disabled",
  "worksheet.moveLeft": "disabled",
  "worksheet.moveRight": "disabled",
  "worksheet.moveToFolder": "disabled",
  "worksheet.newFolder": "enabled",
  "worksheet.next": "disabled",
  "worksheet.prev": "disabled",
  "worksheet.rename": "enabled",
  "worksheet.tabColor": "enabled",
  "worksheet.toggleLock": "enabled",
}
`;
